--- a/src/pages/Error/error.scss
+++ b/src/pages/Error/error.scss
@@ -1,17 +1,25 @@
-.error-wrapper {
+.error {
+    font-family: Montserrat;
+}
+
+.error-main-wrapper {
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
+    gap: 50px;
+    padding: 45px;
 }
 
 .error-code {
     margin: 40px auto;
-    font-size: 150px;
+    font-size: 200px;
+    font-weight: bold;
     color: #FF6060;
 }
 
 .error-msg {
     margin: 40px auto;
-    font-size: 30px;
+    font-size: 26px;
     color: #FF6060;
 }
 
