--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -2,48 +2,37 @@ p {
     margin: 0;
 }
 
-.home {
+.home-main-wrapper {
     display: flex;
-    padding: 45px 45px 45px 45px;
     flex-direction: column;
-    gap: 50px;
-}
-
-.banner {
-    width: 100%;
-    height: 223px;
-    border-radius: 25px;
-    margin: 0 auto;
-    position: relative;
-    background-image: url('./../../assets/images/paysage.png');
-    background-size: cover;
-    background-position: center;
-
-    &__text {
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        font-family: Montserrat;
-        font-size: 50px;
-        font-weight: 500;
-        color: white;
-        text-wrap: nowrap;
-    }
-
+    box-sizing: border-box;
+    padding: 45px;
 }
 
 .gallery {
     width: 100%;
     border-radius: 25px;
     background: #F6F6F6;
+    padding: 40px;
+    box-sizing: border-box;
 
     &__ul {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 40px;
+        justify-content: center;
         list-style: none;
         padding: 0;
-        padding-top: 30px;
+        margin: 0;
+        box-sizing: border-box;
+
+        @media screen and (max-width: 450px) {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .div-card {
+            width: 100%;
+        }
     }
 }
