--- a/src/pages/Rentals/Rentals.scss
+++ b/src/pages/Rentals/Rentals.scss
@@ -3,21 +3,16 @@ p {
 }
 
 .rentals {
-    display: flex;
-    flex-direction: column;
-    padding: 45px 45px 45px 45px;
-    margin: 0;
+    font-family: Montserrat;
 }
 
-.lightbox {
-    margin: 50px 0;
-
-    &__img {
-        width: 100%;
-        max-height: 450px;
-        object-fit: cover;
-        border-radius: 30px;
-    }
+.rentals-main-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    box-sizing: border-box;
+    // gap: 50px;
+    padding: 45px 45px 0 45px;
 }
 
 .title-container {
@@ -77,7 +72,19 @@ p {
         margin-right: 10px;
         border-radius: 10px;
         padding: 0 30px;
-        height: 24px;
+        line-height: 30px;
+    }
+
+    &__rating {
+        &--pink-star {
+            color: #FF6060;
+            font-size: 30px;
+        }
+
+        &--grey-star {
+            color: grey;
+            font-size: 30px;
+        }
     }
 }
 
@@ -85,24 +92,11 @@ p {
     display: flex;
     justify-content: space-between;
     margin-bottom: 40px;
+    font-family: Montserrat;
+}
 
-    &__description {
-        width: 45%;
-        height: 40px;
-        background-color: #FF6060;
-        color: white;
-        border-radius: 10px;
-        font-size: 20px;
-        padding: 5px 0 0 10px;
-    }
-
-    &__equipment {
-        width: 45%;
-        height: 40px;
-        background-color: #FF6060;
-        color: white;
-        border-radius: 10px;
-        font-size: 20px;
-        padding: 5px 0 0 10px;
-    }
+.collapse__ul {
+    margin: 0;
+    list-style: none;
+    padding: 0;
 }
