--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -8,6 +8,7 @@ p {
     width: 45%;
     border-radius: 10px;
     overflow: hidden;
+    margin: 10px 0;
 }
 
 .collapse-about {
@@ -16,6 +17,7 @@ p {
     width: 80%;
     border-radius: 5px;
     overflow: hidden;
+    margin: 10px 0;
 }
 
 .titleBox {
@@ -29,11 +31,11 @@ p {
     font-size: 20px;
     height: 50px;
     z-index: 1;
+    cursor: pointer;
 
     &__title {
         margin-left: 5px;
     }
-
 }
 
 .chevron {
@@ -51,25 +53,22 @@ p {
     transition: transform 400ms;
 }
 
+.wrapper {
+    display: flex;
+}
+
+.wrapper.open .content {
+    max-height: 100%;
+    padding: 20px;
+}
 
 .content {
     max-height: 0;
-    background-color: #F6F6F6;
-    padding: 20px;
-    box-sizing: border-box;
-    overflow: hidden; // texte depasse pas
-    color: #FF6060;
+    background-color: #f6f6f6;
+    overflow: hidden;
+    color: #ff6060;
     border-radius: 0 0 5px 5px;
-    margin-top: -5px;
     font-size: 14px;
-}
-
-.content.open {
-    max-height: 2000px;
-    transition: max-height 400ms;
-}
-
-.content.close {
-    max-height: 0;
-    transition: max-height 400ms;
+    padding: 0 20px;
+    transition: all 0.5s ease-out;
 }
