--- a/src/pages/Rentals/Rentals.scss
+++ b/src/pages/Rentals/Rentals.scss
@@ -11,7 +11,6 @@ p {
     flex-direction: column;
     align-items: stretch;
     box-sizing: border-box;
-    // gap: 50px;
     padding: 45px 45px 0 45px;
 }
 
@@ -99,4 +98,8 @@ p {
     margin: 0;
     list-style: none;
     padding: 0;
+}
+
+.collapse__li {
+    // width: 100%;
 }
