--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -9,15 +9,24 @@ p {
     border-radius: 10px;
     overflow: hidden;
     margin: 10px 0;
+
+    @media screen and (max-width: 570px) {
+        width: 100%;
+    }
+
 }
 
 .collapse-about {
     display: flex;
     flex-direction: column;
     width: 80%;
-    border-radius: 5px;
+    border-radius: 8px;
     overflow: hidden;
     margin: 10px 0;
+
+    @media screen and (max-width: 570px) {
+        width: 100%;
+    }
 }
 
 .titleBox {
@@ -32,6 +41,11 @@ p {
     height: 50px;
     z-index: 1;
     cursor: pointer;
+
+    @media screen and (max-width: 570px) {
+        height: 25px;
+        font-size: 12px;
+    }
 
     &__title {
         margin-left: 5px;
@@ -60,6 +74,10 @@ p {
 .wrapper.open .content {
     max-height: 100%;
     padding: 20px;
+
+    @media screen and (max-width: 570px) {
+        padding: 10px;
+    }
 }
 
 .content {
@@ -71,4 +89,15 @@ p {
     font-size: 14px;
     padding: 0 20px;
     transition: all 0.5s ease-out;
+
+    @media screen and (max-width: 570px) {
+        font-size: 12px;
+    }
+}
+
+.collapse__ul {
+    margin: 0;
+    list-style: none;
+    padding: 0;
+    width: 800px;
 }
