--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,10 +5,20 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
+
+    @media screen and (max-width: 570px) {
+        justify-content: center;
+    }
 
     &__text {
         color: white;
         margin: 40px auto;
+
+        @media screen and (max-width: 570px) {
+            width: 30%;
+            margin: 10px auto;
+            text-align: center;
+        }
     }
 }
