--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -5,7 +5,12 @@
     margin: 0 auto 50px auto;
     position: relative;
 
-    &__text {
+    @media screen and (max-width: 570px) {
+        max-height: 120px;
+    }
+
+    &__div-text {
+        display: flex;
         position: absolute;
         left: 50%;
         top: 50%;
@@ -14,7 +19,23 @@
         font-size: 50px;
         font-weight: 500;
         color: white;
-        text-wrap: nowrap;
+        text-wrap: wrap;
+        width: 80%;
+        justify-content: center;
+        text-align: center;
+
+        @media screen and (max-width: 900px) {
+            font-size: 32px;
+        }
+
+        @media screen and (max-width: 570px) {
+            display: block;
+            font-size: 26px;
+            left: 5%;
+            top: 50%;
+            transform: translateY(-50%);
+            text-align: left;
+        }
     }
 
     &__img {
@@ -22,5 +43,9 @@
         height: 100%;
         object-fit: cover;
         border-radius: 25px;
+
+        @media screen and (max-width: 570px) {
+            border-radius: 15px;
+        }
     }
 }
