--- a/src/components/RentalCard/RentalCard.scss
+++ b/src/components/RentalCard/RentalCard.scss
@@ -14,6 +14,15 @@
         object-fit: cover;
         border-radius: 10px;
         height: 100%;
+        min-height: 220px;
+
+        @media screen and (max-width: 900px) {
+            min-height: 150px;
+        }
+
+        @media screen and (max-width: 570px) {
+            min-height: 250px;
+        }
     }
 
     &__txt {
@@ -24,5 +33,13 @@
         margin: 0 0 10px 10px;
         font-size: 15px;
         font-weight: 500;
+
+        @media screen and (max-width: 900px) {
+            font-size: 12px;
+        }
+
+        @media screen and (max-width: 570px) {
+            font-size: 20px;
+        }
     }
 }
