--- a/src/components/Slideshow/Slideshow.scss
+++ b/src/components/Slideshow/Slideshow.scss
@@ -2,12 +2,24 @@
     margin-bottom: 50px;
     position: relative;
     color: white;
+    width: 100%;
+
+    @media screen and (max-width: 570px) {
+        margin: 10px auto;
+    }
 
     &__img {
         width: 100%;
         max-height: 450px;
+        min-height: 445px;
         object-fit: cover;
         border-radius: 20px;
+
+        @media screen and (max-width: 570px) {
+            max-height: 255px;
+            min-height: 250px;
+            border-radius: 10px;
+        }
     }
 
     &__chevronRight {
@@ -16,6 +28,10 @@
         transform: translateY(-50%);
         right: 2%;
         font-size: 80px;
+
+        @media screen and (max-width: 570px) {
+            font-size: 20px;
+        }
     }
 
     &__chevronLeft {
@@ -24,6 +40,10 @@
         transform: translateY(-50%);
         left: 2%;
         font-size: 80px;
+
+        @media screen and (max-width: 570px) {
+            font-size: 20px;
+        }
     }
 
     &__number {
@@ -31,5 +51,9 @@
         bottom: 5%;
         left: 50%;
         font-size: 20px;
+
+        @media screen and (max-width: 570px) {
+            display: none;
+        }
     }
 }
