--- a/src/pages/Error/error.scss
+++ b/src/pages/Error/error.scss
@@ -8,6 +8,11 @@
     box-sizing: border-box;
     gap: 50px;
     padding: 45px;
+
+    @media screen and (max-width: 570px) {
+        gap: 30px;
+        padding: 30px;
+    }
 }
 
 .error-code {
@@ -15,12 +20,29 @@
     font-size: 200px;
     font-weight: bold;
     color: #FF6060;
+
+    @media screen and (max-width: 570px) {
+        margin: 20px auto;
+        font-size: 80px;
+    }
+}
+
+.error-msg-box {
+    margin: 40px auto;
+    text-align: center;
+
+    @media screen and (max-width: 570px) {
+        margin: 20px auto;
+    }
 }
 
 .error-msg {
-    margin: 40px auto;
     font-size: 26px;
     color: #FF6060;
+
+    @media screen and (max-width: 570px) {
+        font-size: 16px;
+    }
 }
 
 .error-link {
@@ -28,4 +50,9 @@
     font-size: 15px;
     color: #FF6060;
     cursor: pointer;
+
+    @media screen and (max-width: 570px) {
+        margin: 20px auto;
+        font-size: 12px;
+    }
 }
