--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -7,18 +7,34 @@ p {
     flex-direction: column;
     box-sizing: border-box;
     padding: 45px;
+
+    @media screen and (max-width: 570px) {
+        padding: 5%;
+    }
 }
 
 .gallery {
     width: 100%;
     border-radius: 25px;
     background: #F6F6F6;
-    padding: 40px;
+    padding: 30px;
     box-sizing: border-box;
+
+    @media screen and (max-width: 900px) {
+        padding: 25px;
+    }
+
+    @media screen and (max-width: 570px) {
+        background: white;
+        padding: 0;
+        margin-top: 15px;
+    }
+
 
     &__ul {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: minmax(150px, auto);
         gap: 40px;
         justify-content: center;
         list-style: none;
@@ -26,14 +42,23 @@ p {
         margin: 0;
         box-sizing: border-box;
 
-        @media screen and (max-width: 450px) {
+        @media screen and (max-width: 900px) {
+            gap: 20px;
+        }
+
+        @media screen and (max-width: 570px) {
             display: flex;
             flex-direction: column;
+            gap: 10px;
         }
 
         .div-card {
             width: 100%;
             cursor: pointer;
+
+            @media screen and (max-width: 570px) {
+                width: 100%;
+            }
         }
     }
 }
